--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,10 +50,13 @@ android {
         applicationId "com.kosidev.mentalHealthCareApp"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        // Enabling multidex support.
+        multiDexEnabled true
     }
 
     buildTypes {
