--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   sign_in_with_apple: ^4.0.0
   flutter_dotenv: ^5.0.2
   crypto: ^3.0.2
+  buttons_tabbar: ^1.3.6
+  line_icons: ^2.0.1
 
 dev_dependencies:
   flutter_test:
