--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   crypto: ^3.0.2
   buttons_tabbar: ^1.3.6
   line_icons: ^2.0.1
+  path_provider: ^2.0.11
+  path: ^1.8.1
 
 dev_dependencies:
   flutter_test:
