--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -26,6 +26,10 @@ Flutter/flutter_assets/
 Flutter/flutter_export_environment.sh
 ServiceDefinitions.json
 Runner/GeneratedPluginRegistrant.*
+Runner/GoogleService-Info.plist
+*.ipa
+*.dSYM.zip
+*.dSYM
 
 # Exceptions to above rules.
 !default.mode1v3
