--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   line_icons: ^2.0.1
   path_provider: ^2.0.11
   path: ^1.8.1
+  table_calendar: ^3.0.6
 
 dev_dependencies:
   flutter_test:
