--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   path_provider: ^2.0.11
   path: ^1.8.1
   table_calendar: ^3.0.6
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
