--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   giphy_get: ^3.1.0
   flutter_audio_recorder2: ^0.0.2
   file: ^6.1.2
+  video_thumbnail: ^0.5.2
 
 dev_dependencies:
   flutter_test:
