--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,7 @@ flutter:
     - assets/images/
     - .env
     - assets/psychologists.json
+    - assets/articles.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
